Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/LocalClasses_2.out
LocalClasses_2.java:15:13: compiler.err.already.defined: kindname.class, Local, kindname.method, foo()
1 error
